tests/snapshots/mv__mv_reanchored_moved_frozen_doc.snap
---
source: tests/mv.rs
expression: "fs::read_to_string(dir.path().join(\"plans/archive/shipped.md\")).unwrap()"
---
# Shipped

**Status:** implemented (2026-01-01)

See [the map](../../docs/persistence.md).
