tests/snapshots/mv__mv_reanchors_a_frozen_doc_it_moves_itself.snap
---
source: tests/mv.rs
info:
  program: aigarden
  args:
    - mv
    - plans/shipped.md
    - plans/archive/shipped.md
---
success: true
exit_code: 0
----- stdout -----
moved plans/shipped.md → plans/archive/shipped.md (rewrote 1 reference(s) across 1 file(s))
✓ aigarden: checked 3 files, no findings

----- stderr -----
