tests/snapshots/mv__mv_refuses_when_the_destination_exists.snap
---
source: tests/mv.rs
info:
  program: aigarden
  args:
    - mv
    - a.md
    - b.md
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
aigarden: destination `b.md` already exists
