tests/snapshots/mv__mv_rewrites_a_frozen_doc_whose_citations_are_still_checked.snap
---
source: tests/mv.rs
info:
  program: aigarden
  args:
    - mv
    - docs/persistence.md
    - docs/storage/persistence.md
---
success: true
exit_code: 0
----- stdout -----
moved docs/persistence.md → docs/storage/persistence.md (rewrote 1 reference(s) across 1 file(s))
✓ aigarden: checked 3 files, no findings

----- stderr -----
