tests/snapshots/mv__mv_rewrites_a_live_directorys_sibling.snap
---
source: tests/mv.rs
expression: "fs::read_to_string(dir.path().join(\"plans/building/grill.md\")).unwrap()"
---
# Grill

Weighing [the map](../../docs/storage/persistence.md).
