tests/snapshots/mv__mv_rewrites_both_a_file_relative_link_and_a_root_relative_bare_path.snap
---
source: tests/mv.rs
info:
  program: aigarden
  args:
    - mv
    - docs/persistence.md
    - docs/storage/persistence.md
---
success: true
exit_code: 0
----- stdout -----
moved docs/persistence.md → docs/storage/persistence.md (rewrote 2 reference(s) across 1 file(s))
✓ aigarden: checked 2 files, no findings

----- stderr -----
